// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Glph Shallow Component should have empty span 1`] = `
<span
  className="glyphicon-"
/>
`;

exports[`Glph Shallow Component should have span with classname search 1`] = `
<span
  className="glyphicon-search"
/>
`;
